// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should postprocess elements allow modify element metadata 1`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "align": {
      "deprecated": true,
    },
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "datafld": {
      "deprecated": true,
    },
    "dataformatas": {
      "deprecated": true,
    },
    "datasrc": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "hidden": {
      "boolean": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
}
`;

exports[`parser should postprocess elements allow modify element metadata 2`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "hidden": {
      "boolean": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
}
`;
